--- a/PacmanGame/style.css
+++ b/PacmanGame/style.css
@@ -5,14 +5,14 @@ body {
 .lefttxt{
     position:absolute;
     top:50px;
-    left:80px;
+    left:40px;
     font-size: 25px;
 }
 
 .righttxt{
     position:absolute;
     top:50px;
-    right:400px;font-size: 25px;
+    left:250px;font-size: 25px;
 }
 
 .mainframe{
